# OpenTariff

./: Dockerfile  Makefile  README.md  compose.ci.yml  compose.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
opentariff/Enums/: base_enums.py  product_enums.py  tariff_enums.py
opentariff/models/: models.py  product_models.py  tariff_models.py
tests/models/: test_product_models.py  test_tariff_models.py
