[tool.poetry]
name = "open-tariff"
version = "0.0.1"
description = "An open-source tariff schema definition"
authors = ["Future Energy Associates <hello@futureenergy.associates>"]
readme = "README.md"

[tool.setuptools]
packages = ["opentariff"]

[tool.poetry.include]
opentariff = true


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
